# ta-quarterly-report

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
src/: config.py  hex_prompt.py  main.py
src/data/: models.py
src/deck/: builder.py  styles.py
src/deck/slides/: by_architect.py  closing.py  current_pipeline.py  helpers.py  hero_metric.py  pipeline.py  quarter_by_architect.py  quarter_metrics.py  reading_data.py  ta_pipeline.py  title_slide.py  whats_next.py
src/insights/: metrics.py
src/templates/: hex_prompt.txt  ta_analysis_prompt.md  ta_charter_context.md
